[package]
name = "runling-run-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
num = "0.4.3"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0.209", features = ["derive"] }
sha1 = "0.10.6"
